examples/errors/already_declared_variable.dgf
print "==== DEBUT ====";

define T "s";

let temps = T;
let temps = T * T;

print "===== FIN =====";